pages along with signal implemention

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,10 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/templatemo-xtra-blog.css",
+              "src/assets/fontawesome/css/all.min.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
